[tool.poetry]
name = "stam-prolog"
version = "0.1.0"
description = ""
authors = ["H1rono", "kenken714", "kamaboko720", "Kaki256", "sumirinn"]
readme = "README.md"

[[tool.poetry.packages]]
include = "stam_prolog"

[[tool.poetry.packages]]
include = "bot"

[tool.poetry.scripts]
bot = 'bot.run:main'

[tool.poetry.dependencies]
python = "^3.11"
traq = "^3.9.1.post0"
python-dotenv = "^1.0.0"
frozenlist = "^1.3.3"

[tool.poetry.dependencies.traq-bot]
git = "https://github.com/detteiu8383/python-traq-bot.git"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
